- Change Derivative publiclyReleasable description

--- a/schema/derivative.yml
+++ b/schema/derivative.yml
@@ -209,9 +209,7 @@ components:
             publiclyReleasable:
               type: boolean
               description:
-                Can the object represented by the metadata be released
-                publicly? An object that is released publicly retains its license and
-                copyright
+                Can the object represented by the metadata be released?
             notPubliclyReleasableReason:
               type: string
               description: Text explaining why an object cannot be released publicly
