--- a/schema/derivative.yml
+++ b/schema/derivative.yml
@@ -177,6 +177,9 @@ components:
             fileIdentifier:
               type: string
               description: Identifier (as UUID) of the file described by the metadata
+            filename:
+              type: string
+              description: Current name of the file including the file extension. The value may have been standardized.
             dcType:
               enum:
                 - IMAGE
