--- a/schema/metadata.yml
+++ b/schema/metadata.yml
@@ -317,6 +317,12 @@ components:
               description: Metadata can also reference a external resource instead of a internal file identifier. If this is provided, a file identifier cannot be set.
               format: uri
               nullable: true
+            sourceSet:
+              type: string
+              description: "Used to group a set of records that were created together. From an import/migration."
+              nullable: true
+              minLength: 0
+              maxLength: 50
         relationships:
           nullable: true
           properties:
